Complete the Skillet Chicken Thighs Recipe

--- a/recipes/chicken_breast.html
+++ b/recipes/chicken_breast.html
@@ -30,6 +30,16 @@
         <li>grated parmesan</li>
     </ul>
 <!--Create an unorganized list with all the ingredients needed-->
+    <h3>Steps:</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Season chicken thighs with salt and pepper.</li>
+        <li>Set an oven-proof skillet on high heat. When hot, add 1 tablespoon oil and chicken. Cook until well seared, about 3 minutes per side. Remove chicken to a plate and reduce heat to medium.</li>
+        <li>Add remaining 1/2 tablespoon oil, then add garlic, thyme, and rosemary. Bloom spices together for 1 minute. Pour in chicken broth, then add sun-dried tomatoes, and finally the cream. Stir well and then blend in Parmesan cheese. Bring to a light simmer. Add chicken back to the pan.</li>
+        <li>Transfer to the preheated oven and bake, uncovered, until chicken is no longer pink in the center and the juices run clear, about 15 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+        <li>Remove from the oven and allow to cool slightly to let the sauce thicken before serving, about 5 minutes.</li>
+    </ol>
+    <!--If you have observed that this is copy paste from the original site, that is correct. 
+        I do not inted to paraphrase instructions and this website is for educational purposes only-->
     <h6><em>All credit goes to the original author of the recipe, Christine Watson. You may find her recipe <a href="https://www.allrecipes.com/recipe/283799/creamy-skillet-chicken-thighs/">here</a></em></h6>
     <!--Credit the author and add a link to their recipe online-->
 </body>
