Add CSS styles to the website

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <!--Created the standard head with the page title-->
+    <link rel="stylesheet" href="./styles/style.css">
+    <!--Create the standard head with the page title
+    import stylesheet into the project-->
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <!--Displayed a header 1 to identify the index page-->
     <p>Welcome! Please choose one of the recipes below:</p> 
     <ul>
-        <li><a href="./recipes/chicken_breast.html">Skillet Chicken Thighs</a></li>
-        <li><a href="./recipes/cold_soba.html">Cold Soba Recipe</a></li>
-        <li><a href="./recipes/dump_cake.html">BlackBerry Dump Cake</a></li>
+        <li><button><a href="./recipes/chicken_breast.html">Skillet Chicken Thighs</a></button></li>
+        <li><button><a href="./recipes/cold_soba.html">Cold Soba Recipe</a></button></li>
+        <li><button><a href="./recipes/dump_cake.html">BlackBerry Dump Cake</a></button></li>
     </ul>
     <!--Created an unorganized list to display links to each of the recipes available-->
 </body>
