--- a/recipes/chicken_breast.html
+++ b/recipes/chicken_breast.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skillet Chicken Thighs</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <!--add the standard style sheet to the project-->
 </head>
 <body>
     <h1>Skillet Chicken Thighs</h1>
     <!--Created a title to identify the page by its appropriate name-->
-    <p><a href="../index.html">Back Home</a></p>
+    <p><button><a href="../index.html">Back Home</a></button></p>
     <!--Create a link to the index page for site mobility-->
     <img src="https://bit.ly/3ef5u9Y" alt="A picture of a succulent chicken thigh and cheese skillet" width="500">
     <!--inserted an image corresponding to the recipe-->
-    <h2>Description</h2>
+    <h2 class="title">Description</h2>
     <p>Skillet chicken thighs with really saucy sauce. It is finger licking good!</p>
     <!--Create a simple description of the recipes to entice the pallet-->
-    <h3>Ingredients:</h3>
+    <h3 class="title">Ingredients:</h3>
     <ul>
         <li>boneless chicken thighs</li>
         <li>salt and pepper</li>
@@ -30,7 +32,7 @@
         <li>grated parmesan</li>
     </ul>
 <!--Create an unorganized list with all the ingredients needed-->
-    <h3>Steps:</h3>
+    <h3 class="title">Steps:</h3>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C). Season chicken thighs with salt and pepper.</li>
         <li>Set an oven-proof skillet on high heat. When hot, add 1 tablespoon oil and chicken. Cook until well seared, about 3 minutes per side. Remove chicken to a plate and reduce heat to medium.</li>
