--- a/recipes/cold_soba.html
+++ b/recipes/cold_soba.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cold Soba Noodles</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <!--add the standard style sheet to the project-->
 </head>
 <body>
     <h1>Cold Soba Noodles</h1>
     <!--Created a title to identify the page by its appropriate name-->
-    <p><a href="../index.html">Back Home</a></p>
+    <p><button><a href="../index.html">Back Home</a></button></p>
     <!--Create a link to the index page for site mobility-->
     <img src="https://bit.ly/3cPwNHo" alt="A picture of some Japanese Soba Noodles" width="500">
     <!--inserted an image corresponding to the recipe-->
-    <h2>Description</h2>
+    <h2 class="title">Description</h2>
     <p>Tender pork tenderloin is the perfect partner to this tasty Asian-flavored buckwheat cold noodle salad.</p>
     <!--Create a simple description of the recipes to entice the pallet-->
-    <h3>Ingredients:</h3>
+    <h3 class="title">Ingredients:</h3>
     <ul>
         <li>dried soba noodles</li>
         <li>hoisin sauce</li>
@@ -29,7 +31,7 @@
         <li>red pepper</li>
     </ul>
 <!--Create an unorganized list with all the ingredients needed. I took some creative liberties with this one-->
-    <h3>Steps:</h3>
+    <h3 class="title">Steps:</h3>
     <ol>
         <li>Bring a large pot of water to a boil, add soba noodles, and cook according to package directions, about 4 minutes. Drain noodles, rinse under cold water, and set aside to cool.</li>
         <li>Pour dressing over noodles. Add red bell pepper and toss to combine. Refrigerate until well chilled, at least 1 hour.</li>
