--- a/recipes/dump_cake.html
+++ b/recipes/dump_cake.html
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackberry Dump Cake</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <!--add the standard style sheet to the project-->
 </head>
 <body>
     <body>
         <h1>Blackberry Dump Cake</h1>
         <!--Created a title to identify the page by its appropriate name-->
-        <p><a href="../index.html">Back Home</a></p>
+        <p><button><a href="../index.html">Back Home</a></button></p>
         <!--Create a link to the index page for site mobility-->
         <img src="https://bit.ly/3KFxBLH" alt="A picture of nice warm Dump Cake" width="500">
         <!--inserted an image corresponding to the recipe. Set the width to 500-->
-        <h2>Description</h2>
+        <h2 class="title">Description</h2>
         <p>This blackberry dump cake is a crowd pleaser. Serve with ice cream or whipped topping.</p>
         <!--Create a simple description of the recipes to entice the pallet-->
-        <h3>Ingredients:</h3>
+        <h3 class="title">Ingredients:</h3>
         <ul>
             <li>fresh blackberries</li>
             <li>white sugar</li>
@@ -25,7 +27,7 @@
             <li>french vanilla cake mix</li>
         </ul>
     <!--Create an unorganized list with all the ingredients needed.-->
-        <h3>Steps:</h3>
+        <h3 class="title">Steps:</h3>
         <ol>
             <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
             <li>Mix blackberries and sugar together in a bowl. Transfer to a 9x13-inch glass baking pan and spread evenly over the bottom.</li>
